tests/baselines/reference/classExtendsClauseClassMergedWithModuleNotReferingConstructor.errors.txt
classExtendsClauseClassMergedWithModuleNotReferingConstructor.ts(2,5): error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
classExtendsClauseClassMergedWithModuleNotReferingConstructor.ts(10,21): error TS2507: Type 'number' is not a constructor function type.
classExtendsClauseClassMergedWithModuleNotReferingConstructor.ts(11,9): error TS2564: Property 'b' has no initializer and is not definitely assigned in the constructor.


==== classExtendsClauseClassMergedWithModuleNotReferingConstructor.ts (3 errors) ====
    class A {
        a: number;
        ~
!!! error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
    }
    namespace A {
        export var v: string;
    }
    
    namespace Foo {
        var A = 1;
        class B extends A {
                        ~
!!! error TS2507: Type 'number' is not a constructor function type.
            b: string;
            ~
!!! error TS2564: Property 'b' has no initializer and is not definitely assigned in the constructor.
        }
    }